--- a/_drafts/2017-08-25-top-100-for-gc.markdown
+++ b/_drafts/2017-08-25-top-100-for-gc.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Top task management on Canada.ca"
+title:  "How we identified top tasks for Canada.ca"
 gradelevel: x
 ref: template
 date:   2017-08-25 09:48:44 +0100
