--- a/_drafts/2017-08-25-top-100-for-gc.markdown
+++ b/_drafts/2017-08-25-top-100-for-gc.markdown
@@ -23,8 +23,15 @@ People come to Canada.ca with a goal in mind and a task that they want to accomp
 There are a huge number of tasks to support on Canada.ca. We focus on the [top 100 tasks list for the Government of Canada](https://canada-ca.github.io/pages/top-task-list-canada-ca.html).
 <figure>
 <img src="/images/top100piechart-548x528.png" width="548" height="528" alt="Pie chart showing one segment taking up one quarter, next 4 segments covering about half, and segments getting smaller till they blend into each other by the end. Data is from the top task list for Canada.ca">
-<figcaption>
-The top 5 tasks are responsible for more than 50% of all website visits.
+<figcaption style="caption-side: right;">
+<p>The top 5 tasks are responsible for more than 50% of all website visits.</p>
+<ul>
+<li>Get a local weather forecast</li>
+<li>Get a visitor visa</li>
+<li>Apply to immigrate to Canada</li>
+<li>Get marine conditions</li>
+<li>Get an eTA (electronic Travel Authorization)</li>
+</ul>
 </figcaption>
 </figure>
 
