--- a/_posts/2017-08-25-top-100-for-gc.markdown
+++ b/_posts/2017-08-25-top-100-for-gc.markdown
@@ -5,7 +5,7 @@ gradelevel: 7.8
 ref: template
 date:   2017-08-25 09:48:44 +0100
 categories: top-tasks, optimization
-published: false
+published: true
 lang: en
 ---
 
