--- a/_posts/2017-11-14-100-taches-du-gc.markdown
+++ b/_posts/2017-11-14-100-taches-du-gc.markdown
@@ -4,7 +4,7 @@ title:  "De quelle façon déterminons-nous les principales tâches pour Canada.
 gradelevel: 7.8
 ref: toptasks
 date:   2017-11-14 09:48:44 +0100
-categories: top-tasks optimization
+categories: category
 published: true
 lang: fr
 description: French description (put it in the markdown file containing the post) needs to go here.
